--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1beta1
 kind: ReplicationController
 metadata:
-  name: tomcat-demo
+  name: nginx-demo
 spec:
   replicas: 2
   selector:
